Service changes: ResponseEntity using